<resources>
    <string name="app_name">Otapp</string>
    <string name="welcom">Welcome to otapp</string>
    <string name="or_continue_with">OR Continue With:</string>
    <string name="thanks">Thanks, we just need a few more details to create your OTAPP account.</string>
    <string name="please_login">Please Login/Sign Up using your E-mail to continue.</string>
    <string name="you_agree">By proceeding you agree with our Terms of Service &amp; Privacy Policy</string>
    <string name="select_time_option">Select Time Option For This Trip</string>
    <string name="already_member">Already a member? Login Here</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="new_register">New Here? Register</string>
    <string name="emailId">Email ID</string>
    <string name="password">Password</string>
    <string name="emailId_Mobile_number">Email ID/Mobile Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="create_password">Create Password</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="txt_continue">Continue</string>
    <string name="book_now">Book Now</string>
    <string name="home">Home</string>
    <string name="my_booking">My Booking</string>
    <string name="profile">My Account</string>
    <string name="settings">Settings</string>
    <string name="bus">Bus</string>
    <string name="flight">Flights</string>
    <string name="hotel">Hotels</string>
    <string name="movie">Movie</string>
    <string name="event">Events/Clubs</string>
    <string name="ferry">Ferry</string>
    <string name="theme_park">ThemePark</string>
    <string name="tours">Tours</string>
    <string name="visit">Visit</string>
    <string name="coming_soon_park">Coming Soon</string>
    <string name="please">Please</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="verification">Verification</string>
    <string name="additinal_verification_required">Additional verification required</string>
    <string name="verify">Verify</string>
    <string name="perfect_holidays">Perfect Holidays</string>
    <string name="breathtaking_cities">Breathtaking Cities</string>
    <string name="add_city">Add City</string>
    <string name="all">All</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="travellers">Travellers</string>
    <string name="clas">Class</string>
    <string name="currency_title">Currency</string>
    <string name="search_buses">Search Buses</string>
    <string name="search_flight">Search Flights</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="offers_deals">Offers &amp; Deals</string>
    <string name="why_book">Why book with OTAPP?</string>
    <string name="filter">Filter</string>
    <string name="time">Time</string>
    <string name="ac">AC</string>
    <string name="seating">Seating</string>
    <string name="sort">Sort</string>
    <string name="filter_preferences">Filter Preferences</string>
    <string name="time_preferences">Time Preferences</string>
    <string name="seating_preferences">Seating Preferences</string>
    <string name="sort_preferences">Sort Preferences</string>
    <string name="bus_preferences">Bus Preferences</string>
    <string name="ac_seater">Ac Seater</string>
    <string name="ac_sleeper">Ac Sleeper</string>
    <string name="non_ac_seater">Non Ac Seater</string>
    <string name="non_ac_sleeper">Non Ac Sleeper</string>
    <string name="fastest">Fastest</string>
    <string name="cheapest">Cheapest</string>
    <string name="earliest">Earliest</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="select_bus_agent">Select Bus Traveller Agent</string>
    <string name="select_pickup_point">Select Pickup Point</string>
    <string name="select_drop_point">Select Drop Point</string>
    <string name="bus_operator">Operator Preference</string>
    <string name="price">Price</string>
    <string name="price_colon">Price:</string>
    <string name="select_floor">Select Floor</string>
    <string name="select_seat">Select Seat</string>
    <string name="select_bus_stop">Select Bus Stop</string>
    <string name="booked">Booked</string>
    <string name="sold_out">Sold Out</string>
    <string name="selected">Selected</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="seat_no">Seat No</string>
    <string name="seat">Seat</string>
    <string name="seats_bracket">Seat(s)</string>
    <string name="total">Total</string>
    <string name="grand_total">Grand Total</string>
    <string name="book">Book</string>
    <string name="boarding_point">Boarding Point</string>
    <string name="droping_point">Dropping Point</string>
    <string name="general_details">General Details</string>
    <string name="gender">Gender</string>
    <string name="marital_status">Marital Status</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="can_not_change">can not be changed</string>
    <string name="my_profile">My Profile</string>
    <string name="my_trips">My Trips</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_tickets">My Tickets</string>
    <string name="my_saved_cards">My Saved Cards</string>
    <string name="my_purchase">My Purchase</string>
    <string name="change_country">Change Country</string>
    <string name="like_us">Like Us</string>
    <string name="likes">Likes</string>
    <string name="like">Like</string>
    <string name="rate_us">Rate Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="notifications">Notifications</string>
    <string name="reset_password">Reset Password</string>
    <string name="logout">Logout</string>
    <string name="traveller_details">Traveller Details</string>
    <string name="first_name">First Name</string>
    <string name="middle_name_optional">Middle Name (Optional)</string>
    <string name="last_name">Last Name</string>
    <string name="dob">Date of Birth</string>
    <string name="dob_optional">Date of Birth (Optional)</string>
    <string name="age">Age</string>
    <string name="id_card">ID Card</string>
    <string name="id_number">ID Number</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="proceed_payment">Proceed to Pay</string>
    <string name="payment">Payment</string>
    <string name="apply">Apply</string>
    <string name="sub_total">Sub Total</string>
    <string name="sub_title">Sub Title</string>
    <string name="internet_handling">Internet handling fees</string>
    <string name="taxes">Taxes</string>
    <string name="apply_counpon">Apply Coupon</string>
    <string name="apply_counpon_code">Apply Coupon Code</string>
    <string name="apply_promo_code">Apply Promo Code</string>
    <string name="select_payment_code">Select Payment Code</string>
    <string name="select_payment_mode">Select Payment Mode</string>
    <string name="debit_credit_card">Debit Credit Card</string>
    <string name="tigo_pesa">Tigo Pesa</string>
    <string name="airtel_money">Airtel Money</string>
    <string name="amount_payable">Amount payable</string>
    <string name="select_date_time">Select Date &amp; Time</string>
    <string name="park">Park</string>
    <string name="date">Date</string>
    <string name="onwards">onwards</string>
    <string name="proceed">Proceed</string>
    <string name="in_process">In process</string>
    <string name="ticket">Ticket</string>
    <string name="oops">Oops!</string>
    <string name="all_cities">All Cities</string>
    <string name="hint_search_park">Search Water / Theme Park</string>
    <string name="hint_search_movie">Search for Movies &amp; Cinemas</string>
    <string name="no_event">It seems no events happening currently, please try another day.</string>
    <string name="even_better">Even better, why not try our Themepark or Movies</string>
    <string name="login_retrive_details">Log-in to retrieve passenger details</string>
    <string name="use_my_details">Use my details as passenger</string>
    <string name="payment_successful">Payment Successful!</string>
    <string name="payment_recieved">Thank you! Your payment of %s has been received</string>
    <string name="payment_type">Payment Type</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="name">Name</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="transaction_ID">Transaction ID</string>
    <string name="go_to_homepage">GO TO HOMEPAGE</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="currency">Rs</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="now_showing">Now Showing</string>
    <string name="upcoming">Upcoming</string>
    <string name="select_your_category">Select your category</string>
    <string name="pay">Pay</string>
    <string name="order_preview">Order Preview</string>
    <string name="almost_there">Almost there</string>
    <string name="synopsis_information">SYNOPSIS AND INFORMATION</string>
    <string name="director">Director :</string>
    <string name="cast_crew">Cast and Crew :</string>
    <string name="synopsis">Synopsis :</string>
    <string name="reviews">Reviews</string>
    <string name="rate_it">Rate It</string>
    <string name="users_reviews">Users Reviews</string>
    <string name="critics_reviews">Critics Reviews</string>
    <string name="view_all">View all</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="recomended_movie">Recommended Movies</string>
    <string name="selected_seat">Selected Seat</string>
    <string name="dd_glasses">3D Glasses</string>
    <string name="food_beverage">Food &amp; Beverage</string>
    <string name="food_beverage_summary">Food and Beverage Summary</string>
    <string name="skip">Skip</string>
    <string name="skip_continue">Skip &amp; Continue</string>
    <string name="contin">Continue</string>
    <string name="qty">Qty</string>
    <string name="modify">Modify</string>
    <string name="confirm">Confirm</string>
    <string name="rate_the_movie">Rate the Movie</string>
    <string name="mticket">M-Tickets</string>
    <string name="class_seat">Class &amp; Seat</string>
    <string name="screen_name">Screen Name</string>
    <string name="how_movie">How was the Movie?</string>
    <string name="write_movie">Write a Review</string>
    <string name="review_title">Review Title</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="okay">Okay</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="all_eyes">All eyes this way</string>
    <string name="not_added">You have not added the</string>
    <string name="mandatory_entrance">Mandatory Entrance Fee,</string>
    <string name="to_add">to add.</string>
    <string name="skip_purchase">if you have purchased it</string>
    <string name="already_for">already for </string>
    <string name="select_city">Select City</string>
    <string name="select_date">Select Date</string>
    <string name="select_traveller">Select Travellers</string>
    <string name="select_class">Select Class</string>
    <string name="select_currency">Select Currency</string>
</resources>