<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lnrContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/_20sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_rectangle_white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">


        <TextView
            style="@style/ParkFontOpenSansSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/not_added"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            style="@style/ParkFontOpenSansSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mandatory_entrance"
            android:textColor="@color/red_park"
            android:textSize="@dimen/_16sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/ParkFontOpenSansSemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/please"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                style="@style/ParkFontOpenSansSemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/contin"
                android:textAllCaps="true"
                android:textColor="@color/batli_park"
                android:textSize="@dimen/_16sdp" />

            <TextView
                style="@style/ParkFontOpenSansSemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/to_add"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>


        <TextView
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_140sdp"
            android:background="@drawable/bg_park_entrance" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/ParkFontOpenSansSemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/skip"
                android:textAllCaps="true"
                android:textColor="@color/red_park"
                android:textSize="@dimen/_15sdp" />

            <TextView
                style="@style/ParkFontOpenSansSemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/skip_purchase"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/ParkFontOpenSansSemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/already_for"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/tvDate"
                style="@style/ParkFontOpenSansSemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/park"
                android:textColor="@color/batli_park"
                android:textSize="@dimen/_16sdp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSkip"
            style="@style/ParkFontOpenSansSemiBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_round_rectangle_red_light"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/skip"
            android:textAllCaps="true"
            android:textColor="@color/gray_55"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/tvContinue"
            style="@style/ParkFontOpenSansSemiBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_round_rectangle_white"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/contin"
            android:textAllCaps="true"
            android:textColor="@color/batli_park"
            android:textSize="@dimen/_15sdp" />

    </LinearLayout>

</LinearLayout>