<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal"
    android:padding="@dimen/_10sdp">

    <TextView
        android:id="@+id/tvFastest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/FontOpenSansSemiBold"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/fastest"
        android:textColor="@color/gray_46"
        android:textSize="@dimen/_15sdp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_ad" />

    <TextView
        android:id="@+id/tvCheapest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/FontOpenSansSemiBold"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/cheapest"
        android:textColor="@color/gray_46"
        android:textSize="@dimen/_15sdp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_ad" />

    <TextView
        android:id="@+id/tvEarliest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/FontOpenSansSemiBold"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/earliest"
        android:textColor="@color/gray_46"
        android:textSize="@dimen/_15sdp" />

</LinearLayout>