<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="7dp"
    android:gravity="center_vertical">

    <RadioButton
        android:id="@+id/radioButtonPoint"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="5dp" />

    <LinearLayout
        android:id="@+id/linearLayoutBPDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/time"
                android:textColor="@color/colorTextIcon"
                android:textSize="14dp" />

            <TableRow
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorSecondaryText" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/date" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/boarding_point" />
    </LinearLayout>
</LinearLayout>